# Singularity

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE-docs.md  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
app/: CMakeLists.txt  Info.plist.in  app_shell.cpp  app_shell.hpp  entitlements.plist  main.cpp
cli/: CMakeLists.txt  main.cpp
cmake/: SingularityShaders.cmake
core/: CMakeLists.txt
core/include/physics/: disc.hpp  integrator.hpp  kerr.hpp  redshift.hpp  schwarzschild.hpp  state.hpp  vec_types.hpp
core/include/scene/: scene_config.hpp
cuda_cli/: CMakeLists.txt  main.cpp
docs/: ARCHITECTURE.md  NEXT_STEPS_MAC.md  NEXT_STEPS_WINDOWS.md  PHASE7_WEBGPU.md  PHASE8_CUDA.md  PHYSICS.md  PRD.md  TODO.md  WEB_PERF_EDU.md  _config.yml  about.md  download.md  index.md  sitemap.xml
docs/_layouts/: default.html
docs/examples/: kerr_near_extremal.conf  schwarzschild_stellar.conf
render/: CMakeLists.txt
render/cuda/: CMakeLists.txt  cuda_backend.cu  cuda_backend.hpp
render/cuda/kernels/: geodesic_kernel.cu
render/include/: render_backend.hpp
render/metal/: CMakeLists.txt  metal_backend.hpp  metal_backend.mm
render/metal/shaders/: blit.metal  bloom.metal  geodesic_kernel.metal
render/src/: create_default_backend.cpp
render/vulkan/: CMakeLists.txt  vulkan_backend.cpp  vulkan_backend.hpp
render/vulkan/shaders/: blit.hlsl  bloom.hlsl  geodesic_kernel.hlsl
render/webgpu/: CMakeLists.txt  webgpu_backend.cpp  webgpu_backend.hpp
render/webgpu/shaders/: blit.wgsl  bloom.wgsl  geodesic_kernel.wgsl
scenes/: kerr_a05.scene  kerr_a094.scene
shared_shader/: disc_intersection.h  geodesic_math.h  kerr_hamilton.h  kerr_math.h  shader_compat.h  uniforms.h
tests/: CMakeLists.txt  test_adaptive_step.cpp  test_conserved.cpp  test_disc.cpp  test_disc_intersection.cpp  test_integrator.cpp  test_kerr.cpp  test_kerr_geodesic.cpp  test_kerr_hamilton.cpp  test_redshift.cpp  test_scene_config.cpp  test_schwarzschild.cpp
verification/: conftest.py  pyproject.toml  test_backend_equivalence.py  test_blackbody_color.py  test_christoffel_sympy.py  test_cli_interface.py  test_cuda_goldens.py  test_deflection.py  test_kerr_geometry.py  test_kerr_ham_analytic.py  test_phase1_rays.py  test_photon_sphere.py  test_smoke.py  test_vulkan_goldens.py
verification/golden/cuda/: README.md
verification/golden/vulkan/: README.md
web/: CMakeLists.txt  main.cpp  shell.html  smoke.js
