# ----------------------------------------------------------------------------
# Python verification harness for Singularity.
#
# Runs symbolic re-derivations (SymPy), independent reference integrations
# (SciPy), and perceptual-hash-based image diffs (Pillow + ImageHash) against
# the C++ CLI build. See docs/PHYSICS.md §12 for the full test matrix.
#
# Usage (from repo root):
#   python -m venv verification/.venv
#   source verification/.venv/bin/activate   # or .venv\Scripts\activate on Windows
#   pip install -e verification[dev]
#   pytest verification/
# ----------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "singularity-verification"
version = "0.1.0"
description = "Physics-verification harness for the Singularity black-hole renderer"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "sympy>=1.12",
    "pillow>=10.2",
    "ImageHash>=4.3",
    "pytest>=8.0",
    "pytest-xdist>=3.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "black>=24.3",
]

[tool.setuptools]
# No Python package is shipped; pytest collects test files directly from the
# verification/ tree. This table is here so `pip install -e .` succeeds.
py-modules = []

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["."]
# -ra prints a short summary of non-passing tests; -q keeps the normal output
# compact. CI overrides -n auto via the command line as needed.
addopts = "-ra -q"
markers = [
    "smoke: fast liveness check (runs singularity_cli --help and friends)",
    "physics: symbolic / numerical physics verification",
    "golden: perceptual-hash image diffs against stored goldens",
    "equivalence: cross-backend (Metal vs. Vulkan) agreement checks",
    "slow: tests that render full images (seconds each)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]
